<resources>
    <string name="app_name">Take Note!</string>
    <string name="app_ad_ID">ca-app-pub-8871922765309216~2524176358</string>

    <!--real unit id-->
    <string name="interstitial_note_unit_id">ca-app-pub-8871922765309216/3111349770</string>
    <string name="interstitial_note_trash_unit_id">ca-app-pub-8871922765309216/2656038291</string>
    <string name="interstitial_subsection_unit_id">ca-app-pub-8871922765309216/4482951820</string>
    <string name="native_main_note_unit_id">ca-app-pub-8871922765309216/4767196312</string>
    <string name="native_category_unit_id">ca-app-pub-8871922765309216/3454114648</string>
    <string name="native_category_fragment_unit_id">ca-app-pub-8871922765309216/2777475147</string>
    <string name="native_all_notes_unit_id">ca-app-pub-8871922765309216/5090629940</string>
    <string name="native_trash_note_unit_id">ca-app-pub-8871922765309216/4439909161</string>
    <string name="native_search_note_unit_id">ca-app-pub-8871922765309216/2374150465</string>

    <string name="title">Title</string>
    <string name="write_here">Write here</string>
    <string name="body">Body</string>
    <string name="my_notes">My Notes</string>
    <string name="my_categories">My Categories</string>
    <string name="options">Options</string>
    <string name="choose_color">Choose color</string>
    <string name="share">Share</string>
    <string name="add_image">Add image</string>
    <string name="delete_note">Delete note</string>
    <string name="trash_note">Move note to trash</string>
    <string name="trash_note_message">Are you sure you want to move this note to trash?</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_image_message">Are you sure you want to remove this image?</string>
    <string name="remove">Remove</string>
    <string name="move">Move</string>
    <string name="cancel">Cancel</string>
    <string name="subsection">Subsection</string>
    <string name="trash">Trash</string>
    <string name="save_changes">Save changes</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="save">Save</string>
    <string name="don_t_save">Don\'t save</string>
    <string name="add_a_new_category">Add a new category</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="add">Add</string>
    <string name="delete_subsection">Delete subsection</string>
    <string name="are_you_sure_you_want_to_delete_this_subsection">Are you sure you want to delete this subsection?</string>
    <string name="delete">Delete</string>
    <string name="delete_category">Delete category</string>
    <string name="rename_category">Rename category</string>
    <string name="rename">Rename</string>
    <string name="are_you_sure_you_want_to_delete_this_category">Are you sure you want to delete this category?</string>
    <string name="category_name">Category name</string>
    <string name="category">Category :</string>
    <string name="choose_category">choose category</string>
    <string name="no_notes_yet_n_tap_to_button_to_add_note">No notes yet \ntap button to add a note</string>
    <string name="no_categories_yet_n_tap_button_to_add_a_category">No categories yet \ntap button to add a category</string>
    <string name="main">Main</string>
    <string name="all_my_notes">All my notes</string>
    <string name="all_my_categories">All my categories</string>
    <string name="notes_in_trash">Notes in trash</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="share_take_note">Share Take Note!</string>
    <string name="others">Others</string>
    <string name="none">none</string>

    <string name="rate">Rate us!</string>

    <string name="restore_note">Restore note</string>
    <string name="no_notes_in_trash">No notes in trash</string>
    <string name="are_you_sure_you_want_to_permanently_delete_this_note">Are you sure you want to permanently delete this note?</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank You!</string>
    <string name="for_choosing_take_note_i_hope_you_really_enjoy_it">For choosing Take Note, I hope you really enjoy it!</string>
    <string name="next">Next</string>
    <string name="to_create_a_subsection_start_by_pressing_the_subsection_button_circled_above">To create a subsection,
        start by pressing the subsection button circled above!</string>

    <string name="back">Back</string>
    <string name="done">Done</string>

    <string name="write_it_out">Write it out and click done!</string>
    <string name="_1_5">1/5</string>
    <string name="_2_5">2/5</string>
    <string name="_3_5">3/5</string>
    <string name="_4_5">4/5</string>
    <string name="_5_5">5/5</string>

    <string name="congratulations_n_you_have_successfully_created_a_subsection">Congratulations!\nYou have successfully created a subsection</string>
    <string name="you_can_also_create_several_subsections_in_your_notes">You can also create several subsections any where within each note!</string>

    <string name="leave">Leave</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="hierarchy">hierarchy</string>
    <string name="subsection_hierarchy">Subsection hierarchy</string>
    <string name="all_subsections">All Subsections</string>
    <string name="read_note">Read note</string>
    <string name="image">image</string>
    <string name="notes">Notes</string>
    <string name="delete_all_trash">Delete all trash</string>
    <string name="are_you_sure_you_want_to_delete_all_notes_in_trash">Are you sure you want to delete all notes in trash?</string>
    <string name="apps">Apps</string>
    <string name="night_mode">Day/Night mode</string>
    <string name="about">About</string>
    <string name="policy">https://www.app-privacy-policy.com/live.php?token=thfGDjyF9t8jQxWcAdFZpDQCBaOTI0jL</string>
    <string name="about_info">Take Note! allows you to create subsections within your notes for better convenience</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ad">Ad</string>
    <string name="color">color</string>
</resources>
