<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_save_subsection_dialog"
    style="@style/dialogLayoutStyle"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_save_subsection"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_tint" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/big_font"
        android:includeFontPadding="false"
        android:text="@string/save_changes"
        android:textColor="@color/light_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/image_save_subsection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_save_subsection"
        app:layout_constraintTop_toTopOf="@id/image_save_subsection" />

    <TextView
        android:id="@+id/text_save_changes_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/normal_font"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/do_you_want_to_save_your_changes"
        android:textColor="@color/light_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_save_subsection"
        app:layout_constraintTop_toBottomOf="@id/image_save_subsection" />

    <TextView
        android:id="@+id/text_save_subsection"
        style="@style/dialogActionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:includeFontPadding="false"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_save_changes_message" />

    <TextView
        android:id="@+id/text_no_save_subsection"
        style="@style/dialogActionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:includeFontPadding="false"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/don_t_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_save_subsection"
        app:layout_constraintTop_toBottomOf="@id/text_save_changes_message" />
</androidx.constraintlayout.widget.ConstraintLayout>
